--- a/src/app/features/dashboard/dashboard-home/dashboard-home.html
+++ b/src/app/features/dashboard/dashboard-home/dashboard-home.html
@@ -1,2 +1,6 @@
-<h2>Welcome to the Dashboard</h2>
-<p>Select an action from the top menu.</p>
+<!-- <app-dashboard-cards></app-dashboard-cards>
+
+<app-dashboard-charts></app-dashboard-charts>
+
+<app-dashboard-table></app-dashboard-table> -->
+<p>kjdhskjdhk</p>
