--- a/src/app/features/dashboard/dashboard-layout/dashboard-layout.scss
+++ b/src/app/features/dashboard/dashboard-layout/dashboard-layout.scss
@@ -1,3 +1,392 @@
-.dashboard-content {
-  padding: 1.5rem;
+$bg-dark: #10141a;
+$bg-active: #161b22;
+$cyan: #00c5d6;
+$text-gray: #8b949e;
+$text-white: #ffffff;
+
+.sidebar {
+  width: 260px;
+  height: 100vh;
+  background-color: $bg-dark;
+  display: flex;
+  flex-direction: column;
+  color: $text-white;
+  font-family: 'Poppins', sans-serif;
+
+  .sidebar-header {
+    text-align: center;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.05);
+
+    .menu-toggle {
+      background: #1f1d2b;
+      padding: 8px;
+      cursor: pointer;
+      color: $text-gray;
+    }
+  }
+
+  .sidebar-content {
+    flex: 1;
+    padding-top: 1rem;
+
+    .nav-list {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      .nav-item {
+        padding: 0.5rem 1rem;
+
+        .nav-link {
+          display: flex;
+          align-items: center;
+          gap: 15px;
+          padding: 5px;
+          border-radius: 8px;
+          cursor: pointer;
+          color: $text-gray;
+          transition: all 0.3s;
+
+          span {
+            font-weight: 400;
+            color: #706d7e;
+            font-size: 13px;
+          }
+
+          .icon-bg {
+            background: $cyan;
+            color: $bg-dark;
+            padding: 8px;
+            border-radius: 8px;
+          }
+
+          .icon-outline {
+            font-size: 1.2rem;
+            width: 35px;
+            text-align: center;
+            padding: 8px;
+            border-radius: 10px;
+            background-color: #252836;
+          }
+        }
+
+        &.active .nav-link {
+          color: $cyan;
+        }
+        &.active span {
+          color: $cyan !important;
+          font-weight: 700 !important;
+          font-size: 12px !important;
+        }
+
+        .sub-menu {
+          list-style: none;
+          margin-top: 0.5rem;
+          .nav-link {
+            .plus-container {
+              margin-left: auto;
+            }
+          }
+        }
+      }
+    }
+  }
+  .plus-container {
+    background-color: $cyan;
+    padding: 4px 7px;
+    border-radius: 10px;
+  }
+  .sidebar-footer {
+    padding: 1.5rem;
+    display: flex;
+    align-items: center;
+    gap: 15px;
+
+    .user-info {
+      display: flex;
+      flex-direction: column;
+
+      .user-name {
+        font-weight: 700;
+        font-size: 14px;
+        color: #cecbde;
+      }
+      .user-role {
+        color: #cecbde;
+        font-size: 13px;
+      }
+    }
+  }
+}
+.sidebar-short {
+  width: 96px;
+  height: 100vh;
+  background-color: $bg-dark;
+  display: flex;
+  flex-direction: column;
+  color: $text-white;
+  font-family: 'Poppins', sans-serif;
+
+  .sidebar-header {
+    text-align: center;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.05);
+
+    .menu-toggle {
+      background: #1f1d2b;
+      padding: 8px;
+      cursor: pointer;
+      color: $text-gray;
+    }
+  }
+
+  .sidebar-content {
+    flex: 1;
+    padding-top: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    .nav-list {
+      width: 96px;
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      .nav-item {
+        padding: 0.5rem 1rem;
+        .nav-link {
+          display: flex;
+          align-items: center;
+          flex-direction: column;
+          gap: 15px;
+          padding: 5px;
+          border-radius: 8px;
+          cursor: pointer;
+          color: $text-gray;
+          transition: all 0.3s;
+
+          span {
+            font-weight: 400;
+            color: #706d7e;
+            font-size: 13px;
+          }
+
+          .icon-bg {
+            background: $cyan;
+            color: $bg-dark;
+            padding: 8px;
+            border-radius: 8px;
+          }
+
+          .icon-outline {
+            font-size: 1.2rem;
+            width: 35px;
+            text-align: center;
+            padding: 8px;
+            border-radius: 10px;
+            background-color: #252836;
+          }
+        }
+
+        &.active .nav-link {
+          color: $cyan;
+        }
+        &.active span {
+          color: $cyan !important;
+          font-weight: 700 !important;
+          font-size: 12px !important;
+        }
+        .sub-menu {
+          list-style: none;
+          background-color: #252836;
+          border: 2px solid #464353;
+          position: absolute;
+          top: 13px;
+          right: -250px;
+          border-radius: 20px;
+          border-top-left-radius: 0px;
+          border-bottom-left-radius: 0px;
+          width: 250px;
+          .title {
+            font-size: 16px;
+            font-weight: 600;
+            color: #cecbde;
+            padding-left: 15px;
+          }
+          .divider {
+            margin-top: 10px;
+            margin-bottom: 10px;
+            border: 1px solid #464353;
+            width: 100%;
+          }
+          .nav-link {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: space-between;
+            width: 100%;
+            padding-left: 15px;
+            padding-right: 15px;
+            padding-top: 10px;
+            padding-bottom: 10px;
+            .plus-container {
+              margin-left: auto;
+            }
+          }
+        }
+      }
+
+      .has-flyout {
+        position: relative;
+
+        // Hide menu by default
+        .sub-menu-flyout {
+          visibility: hidden;
+          opacity: 0;
+          transform: translateX(10px);
+          transition: all 0.3s ease;
+
+          position: absolute;
+          top: 0;
+          left: 90%; // Starts slightly inside for a smooth "slide out"
+          width: 280px;
+          background-color: #252836;
+          border: 1px solid #464353;
+          border-radius: 20px;
+          border-top-left-radius: 0;
+          border-bottom-left-radius: 0;
+          z-index: 100;
+          box-shadow: 20px 0px 50px rgba(0, 0, 0, 0.5);
+        }
+
+        // Show on Hover
+        &:hover {
+          .sub-menu-flyout {
+            visibility: visible;
+            opacity: 1;
+            transform: translateX(20px); // Slides into position
+          }
+        }
+      }
+      .has-flyout:hover {
+        background: linear-gradient(
+          to right,
+          rgba(0, 229, 255, 0.3) 60%,
+          #252836 100%,
+          transparent 60%
+        );
+        border-top-left-radius: 20px;
+        border-bottom-left-radius: 20px;
+        .nav-link i {
+          color: $cyan;
+        }
+        .nav-link span {
+          display: none;
+        }
+        .nav-link .icon-outline {
+          background: none;
+        }
+      }
+      .flyout-header {
+        display: flex;
+        align-items: center;
+        padding: 1.5rem;
+        border-bottom: 1px solid #464353;
+        border-top-left-radius: 20px;
+        border-top-right-radius: 20px;
+
+        &.active-glow {
+          i {
+            color: $cyan;
+            font-size: 1.8rem;
+            margin-right: 15px;
+            filter: drop-shadow(0 0 8px rgba(0, 229, 255, 0.5));
+          }
+
+          .title {
+            color: white;
+            font-size: 1.2rem;
+            font-weight: 600;
+          }
+        }
+      }
+
+      .flyout-content {
+        padding: 1rem;
+
+        .sub-list {
+          list-style: none;
+          padding: 0;
+          margin: 0;
+        }
+
+        .sub-link {
+          display: flex;
+          align-items: center;
+          padding: 12px 15px;
+          color: #cecbde;
+          border-radius: 12px;
+          cursor: pointer;
+          transition: background 0.2s;
+
+          &:hover {
+            background: rgba(255, 255, 255, 0.03);
+            color: white;
+          }
+
+          i:not(.pi-plus) {
+            font-size: 1.2rem;
+            margin-right: 15px;
+            opacity: 0.5;
+          }
+
+          .plus-btn {
+            margin-left: auto;
+            background: $cyan;
+            width: 28px;
+            height: 28px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 8px;
+
+            i {
+              color: red;
+              font-size: 0.8rem;
+              font-weight: bold;
+            }
+          }
+        }
+      }
+    }
+  }
+  .plus-container {
+    background-color: $cyan;
+    padding: 4px 7px;
+    border-radius: 10px;
+  }
+  .sidebar-footer {
+    padding: 1.5rem;
+    display: flex;
+    align-items: center;
+    gap: 15px;
+
+    .user-info {
+      display: flex;
+      flex-direction: column;
+
+      .user-name {
+        font-weight: 700;
+        font-size: 14px;
+        color: #cecbde;
+      }
+      .user-role {
+        color: #cecbde;
+        font-size: 13px;
+      }
+    }
+  }
+}
+
+.ml-auto {
+  margin-left: auto;
 }
