--- a/src/app/features/dashboard/dashboard-home/dashboard-home.html
+++ b/src/app/features/dashboard/dashboard-home/dashboard-home.html
@@ -1,6 +1,5 @@
-<!-- <app-dashboard-cards></app-dashboard-cards>
-
 <app-dashboard-charts></app-dashboard-charts>
-
-<app-dashboard-table></app-dashboard-table> -->
-<p>kjdhskjdhk</p>
+<app-dashboard-home-search></app-dashboard-home-search>
+<app-dashboard-table></app-dashboard-table>
+<div class="table-separator"></div>
+<app-dashboard-table></app-dashboard-table>
