new user form added

--- a/src/app/features/dashboard/dashboard-layout/dashboard-layout.html
+++ b/src/app/features/dashboard/dashboard-layout/dashboard-layout.html
@@ -41,7 +41,7 @@
                 <div class="nav-link">
                   <i class="pi pi-users icon-outline"></i>
                   <span>Users</span>
-                  <div class="plus-container">
+                  <div class="plus-container" (click)="addNewUser()">
                     <i class="pi pi-plus" style="color: #ffffff"></i>
                   </div>
                 </div>
@@ -108,7 +108,7 @@
                     <div class="sub-link">
                       <i class="pi pi-users"></i>
                       <span>Users</span>
-                      <div class="plus-btn">
+                      <div class="plus-btn" (click)="addNewUser()">
                         <i class="pi pi-plus" style="color: #ffffff"></i>
                       </div>
                     </div>
