--- a/src/app/features/dashboard/dashboard-top-bar/dashboard-top-bar.html
+++ b/src/app/features/dashboard/dashboard-top-bar/dashboard-top-bar.html
@@ -68,7 +68,7 @@
             </div>
             <span>Users</span>
           </div>
-          <div class="plus-action-btn">
+          <div class="plus-action-btn" (click)="addNewUser()">
             <i class="pi pi-plus"></i>
           </div>
         </div>
