--- a/src/app/features/users/user-form/user-form.html
+++ b/src/app/features/users/user-form/user-form.html
@@ -1,52 +1,144 @@
-<div class="flex justify-content-center mt-6">
-  <p-card header="Create User" class="w-full md:w-6">
-    <form [formGroup]="userForm" (ngSubmit)="submit()" class="p-fluid">
-      <!-- Name -->
-      <div class="field">
-        <label for="name">Name</label>
-        <input id="name" type="text" pInputText formControlName="name" />
-        <small
-          class="p-error"
-          *ngIf="userForm.get('name')?.touched && userForm.get('name')?.invalid"
-        >
-          Name is required (min 3 characters)
-        </small>
+<div class="add-user-header flex flex-wrap align-items-center justify-content-between py-3">
+  <div class="flex align-items-center gap-3">
+    <p-button
+      icon="pi pi-arrow-left"
+      [rounded]="true"
+      [text]="true"
+      styleClass="back-btn"
+      (click)="back()"
+    ></p-button>
+
+    <div class="flex flex-column">
+      <span class="font-bold text-sm fs-14" [style.color]="'rgba(206, 203, 222, 1)'">Add User</span>
+      <span class="text-sm fs-14" [style.color]="'rgba(206, 203, 222, 1)'">Organization</span>
+    </div>
+  </div>
+
+  <div class="flex align-items-center gap-3 action-container">
+    <p-button
+      label="Cancel"
+      icon="pi pi-times"
+      [text]="true"
+      size="small"
+      styleClass="cancel-btn"
+      (click)="back()"
+    ></p-button>
+
+    <p-button
+      label="Save"
+      size="small"
+      icon="pi pi-check"
+      styleClass="save-btn px-4"
+      (click)="submit()"
+    ></p-button>
+  </div>
+</div>
+<div class="form-container py-5 flex flex-column align-items-center">
+  <div class="flex flex-column align-items-center mb-5">
+    <div class="avatar-container mb-3">
+      <img [src]="imagePreview" alt="Profile" class="avatar-img" />
+    </div>
+    <input
+      type="file"
+      #fileInput
+      style="display: none"
+      accept="image/*"
+      (change)="onFileSelected($event)"
+    />
+    <p-button
+      label="Update Image"
+      icon="pi pi-camera"
+      styleClass="update-img-btn"
+      (click)="fileInput.click()"
+    ></p-button>
+  </div>
+
+  <form [formGroup]="userForm" (ngSubmit)="submit()" class="w-full lg:w-6">
+    <div class="grid">
+      <div class="col-12 md:col-4 flex flex-column gap-2">
+        <label class="form-label">First Name <span class="text-red-500">*</span></label>
+        <input
+          pInputText
+          formControlName="firstName"
+          placeholder="Ahmed"
+          [class.ng-invalid]="
+            userForm.get('firstName')?.touched && userForm.get('firstName')?.invalid
+          "
+        />
+      </div>
+      <div class="col-12 md:col-4 flex flex-column gap-2">
+        <label class="form-label">Middle Name</label>
+        <input pInputText formControlName="middleName" placeholder="Jasim" />
+      </div>
+      <div class="col-12 md:col-4 flex flex-column gap-2">
+        <label class="form-label">Last Name <span class="text-red-500">*</span></label>
+        <input
+          pInputText
+          formControlName="lastName"
+          placeholder="Ali"
+          [class.ng-invalid]="
+            userForm.get('lastName')?.touched && userForm.get('lastName')?.invalid
+          "
+        />
       </div>
 
-      <!-- Email -->
-      <div class="field">
-        <label for="email">Email</label>
-        <input id="email" type="email" pInputText formControlName="email" />
-        <small
-          class="p-error"
-          *ngIf="userForm.get('email')?.touched && userForm.get('email')?.invalid"
-        >
-          Enter a valid email
-        </small>
+      <div class="col-12 flex flex-column gap-2 mt-3">
+        <label class="form-label">Email <span class="text-red-500">*</span></label>
+        <p-iconField iconPosition="left">
+          <p-inputIcon class="pi pi-envelope text-gray-500"></p-inputIcon>
+          <input
+            pInputText
+            formControlName="email"
+            placeholder="Ahmed.Ali@Company.com"
+            class="w-full"
+          />
+        </p-iconField>
       </div>
 
-      <!-- Role -->
-      <!-- <div class="field">
-        <label for="role">Role</label>
-        <p-dropdown
-          inputId="role"
+      <div class="col-12 flex flex-column gap-2 mt-3">
+        <label class="form-label">Phone</label>
+        <p-iconField iconPosition="left">
+          <p-inputIcon class="pi pi-phone text-gray-500"></p-inputIcon>
+          <input pInputText formControlName="phone" placeholder="+974 3333 4444" class="w-full" />
+        </p-iconField>
+      </div>
+
+      <div class="col-12 flex align-items-center gap-3 mt-4">
+        <label class="form-label m-0">RFID</label>
+        <p-toggleswitch formControlName="rfidEnabled" (onChange)="rfidEnabled = !rfidEnabled" />
+      </div>
+      @if (rfidEnabled) {
+      <div class="col-12 mt-2">
+        <input pInputText formControlName="rfidValue" placeholder="Your RFID" class="w-full" />
+      </div>
+      }
+      <div class="col-12 flex flex-column gap-2 mt-3">
+        <label class="form-label">Role <span class="text-red-500">*</span></label>
+        <p-select
           [options]="roles"
-          formControlName="role"
+          optionLabel="name"
+          optionValue="code"
           placeholder="Select Role"
-        >
-        </p-dropdown>
-        <small
-          class="p-error"
-          *ngIf="userForm.get('role')?.touched && userForm.get('role')?.invalid"
-        >
-          Role is required
-        </small>
-      </div> -->
-
-      <!-- Submit -->
-      <div class="flex justify-content-end mt-4">
-        <button pButton type="submit" label="Create User"></button>
+          [appendTo]="'body'"
+          formControlName="role"
+          [class.ng-invalid]="userForm.get('role')?.touched && userForm.get('role')?.invalid"
+        />
       </div>
-    </form>
-  </p-card>
+
+      <div class="col-12 flex flex-column gap-2 mt-3">
+        <label class="form-label">Department <span class="text-red-500">*</span></label>
+        <p-select
+          [options]="departments"
+          optionValue="code"
+          placeholder="Select Department"
+          [appendTo]="'body'"
+          optionLabel="name"
+          formControlName="department"
+          [class.ng-invalid]="
+            userForm.get('department')?.touched && userForm.get('department')?.invalid
+          "
+        />
+      </div>
+    </div>
+  </form>
 </div>
