--- a/src/app/features/users/user-form/user-form.scss
+++ b/src/app/features/users/user-form/user-form.scss
@@ -1,3 +1,113 @@
-.field {
-  margin-bottom: 1rem;
+.add-user-header {
+  border-bottom: 1px solid rgba(70, 67, 83, 1);
+
+  ::ng-deep .back-btn {
+    color: rgba(206, 203, 222, 1) !important;
+    &:hover {
+      background: rgba(206, 203, 222, 1) !important;
+      color: #0d1117 !important;
+    }
+  }
+
+  ::ng-deep .cancel-btn {
+    color: rgba(206, 203, 222, 1) !important;
+    font-weight: 500;
+    &:hover {
+      background: rgba(255, 255, 255, 0.05) !important;
+    }
+
+    .p-button-icon {
+      font-size: 0.8rem;
+    }
+  }
+
+  ::ng-deep .save-btn {
+    background-color: rgba(96, 190, 122, 1) !important; // The specific green from image_4b2fb8.png
+    border: none !important;
+    border-radius: 5px;
+    color: #0d1117 !important;
+    font-weight: 600;
+    width: 90px !important;
+
+    &:hover {
+      background-color: #4a9d6a !important;
+    }
+
+    ::ng-deep .p-button-icon {
+      font-size: 0.9rem;
+    }
+  }
+}
+
+.form-container {
+  min-height: 100vh;
+
+  // .avatar-container {
+  //   width: 120px;
+  //   height: 120px;
+  //   border-radius: 20px;
+  //   overflow: hidden;
+  //   border: 2px solid rgba(255, 255, 255, 0.05);
+  //   .avatar-img {
+  //     width: 100%;
+  //     height: 100%;
+  //     object-fit: cover;
+  //   }
+  // }
+  .avatar-container {
+    width: 130px;
+    height: 130px;
+    border-radius: 20px; // Smooth corners as seen in design
+    background-color: #242631;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid rgba(255, 255, 255, 0.05);
+
+    .avatar-img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover; // Ensures the photo fills the square nicely
+    }
+  }
+
+  .form-label {
+    color: rgba(158, 155, 173, 1); // Specific label color
+    font-weight: 400;
+    font-size: 13px;
+  }
+
+  ::ng-deep {
+    .p-inputtext,
+    .p-select {
+      background-color: rgba(31, 29, 43, 1) !important; // Muted input background
+      border: 1px solid rgba(31, 29, 43, 1) !important;
+      color: white !important;
+      border-radius: 10px;
+
+      &:focus {
+        border-color: #00e5ff !important;
+        box-shadow: none;
+      }
+      &.ng-invalid.ng-touched {
+        border-color: #ef4444 !important;
+      }
+    }
+
+    ::ng-deep .update-img-btn {
+      background: rgba(31, 29, 43, 1) !important;
+      border: 1px solid rgba(31, 29, 43, 1) !important;
+      color: rgba(158, 155, 173, 1) !important;
+      font-size: 0.8rem;
+      border-radius: 12px;
+    }
+  }
+}
+
+// Mobile Handling
+@media (max-width: 425px) {
+  .action-container {
+    padding-top: 1rem !important;
+  }
 }
