shifts data dynamic

--- a/src/app/features/dashboard/dashboard-table/dashboard-table.html
+++ b/src/app/features/dashboard/dashboard-table/dashboard-table.html
@@ -8,8 +8,7 @@
   </div>
 
   <p-table
-    [value]="vehicles"
-    [responsiveLayout]="'scroll'"
+    [value]="(vehicles$ | async) || []"
     styleClass="p-datatable-custom"
     [rows]="10"
     [resizableColumns]="true"
