--- a/src/app/features/dashboard/dashboard-top-bar/dashboard-top-bar.html
+++ b/src/app/features/dashboard/dashboard-top-bar/dashboard-top-bar.html
@@ -2,9 +2,17 @@
   class="mobile-header flex lg:hidden align-items-center justify-content-between px-3 py-2 flex-wrap"
 >
   <div class="flex align-items-center gap-3">
-    <img src="/short-logo.png" alt="Ideal Solutions" class="h-50 w-50" />
+    <img
+      src="/short-logo.png"
+      alt="Ideal Solutions"
+      class="h-50 w-50"
+      (click)="goToRoute('/dashboard')"
+    />
 
-    <div class="dashboard-badge flex align-items-center gap-2 px-3 py-2 border-round-xl">
+    <div
+      class="dashboard-badge flex align-items-center gap-2 px-3 py-2 border-round-xl"
+      (click)="goToRoute('/dashboard')"
+    >
       <div class="cyan-icon-box flex align-items-center justify-content-center">
         <i class="pi pi-th-large text-gray-900"></i>
       </div>
@@ -30,13 +38,13 @@
 >
   <ng-template pTemplate="header">
     <div class="flex align-items-center justify-content-between w-full">
-      <img src="/short-logo.png" alt="Logo" class="h-60 w-60" />
+      <img src="/short-logo.png" alt="Logo" class="h-60 w-60" (click)="goToRoute('/dashboard')" />
     </div>
   </ng-template>
 
   <div class="flex flex-column h-full">
     <nav class="flex flex-column gap-4 py-4">
-      <div class="flex align-items-center gap-3 px-2">
+      <div class="flex align-items-center gap-3 px-2" (click)="goToRoute('/dashboard')">
         <div class="icon-container-active">
           <i class="pi pi-th-large"></i>
         </div>
@@ -62,7 +70,7 @@
         </div>
 
         <div class="flex align-items-center justify-content-between pl-7 pr-2">
-          <div class="flex align-items-center gap-3 text-gray-400">
+          <div class="flex align-items-center gap-3 text-gray-400" (click)="goToRoute('/users')">
             <div class="icon-container-muted-sm">
               <i class="pi pi-users"></i>
             </div>
